# uStyle-Bert-VITS2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: oss_sanity_check.py
.github/workflows/: oss-sanity.yml
Assets/uStyleBertVITS2/: package.json
Assets/uStyleBertVITS2/Editor/: ModelImportValidator.cs  OrtDirectMLPostProcessBuild.cs  TTSSettingsEditor.cs  uStyleBertVITS2.Editor.asmdef
Assets/uStyleBertVITS2/Runtime/: AssemblyInfo.cs  link.xml  uStyleBertVITS2.Runtime.asmdef
Assets/uStyleBertVITS2/Samples/BasicTTS/: SBV2TTSDemo.cs  SampleScene.unity  TTSSettings.asset
Assets/uStyleBertVITS2/Samples~/BasicTTS/: SBV2TTSDemo.cs  SampleScene.unity
Assets/uStyleBertVITS2/Tests/Editor/: ConfigurationTests.cs  IBertRunnerContractTests.cs  SymbolConsistencyTests.cs  TextNormalizerTests.cs  ToneAndLanguageConsistencyTests.cs  (+1 more)
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
docs/: 00_implementation_roadmap.md  01_onnx_export.md  02_g2p_implementation.md  03_unity_sentis_integration.md  04_architecture_design.md  05_performance_optimization.md  06_csharp_optimization.md  07_cysharp_libraries.md  08_gpu_inference_research.md  09_g2p_migration_dotnet_g2p.md
scripts/: convert_bert_for_sentis.py  convert_for_sentis.py  convert_sbv2_for_sentis.py  pyproject.toml  requirements.txt  validate_onnx.py
(+60 files in other folders)
