[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.24.1",
    "onnxsim>=0.4.36",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
